--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <title> Portfolio</title>
   <meta name="description" content="Self Developed personal website build with React.js">
 
-  Google / Search Engine Tags
+  <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Moch. Tajuddin Al Anshori | Portfolio">
   <meta itemprop="description" content="Personal website with React.js">
 
